[gd_scene load_steps=4 format=3 uid="uid://b628s85wmticp"]

[ext_resource type="FontFile" uid="uid://clcmvkuvth021" path="res://Font/ThaleahFat.ttf" id="1_msvgr"]
[ext_resource type="Script" path="res://death_xd.gd" id="1_yd23d"]
[ext_resource type="Theme" uid="uid://c73aetgv8t85i" path="res://ThemeThingy.tres" id="3_hoc4v"]

[node name="DeathXD" type="Node2D"]
script = ExtResource("1_yd23d")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 640.0
mouse_filter = 2
color = Color(0.231373, 0.0235294, 0.0196078, 0.980392)

[node name="Dead_label" type="Label" parent="."]
offset_top = 48.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_fonts/font = ExtResource("1_msvgr")
theme_override_font_sizes/font_size = 90
text = "DEAD"
horizontal_alignment = 1

[node name="Options" type="VFlowContainer" parent="."]
offset_left = 320.0
offset_right = 834.0
offset_bottom = 648.0
theme = ExtResource("3_hoc4v")
alignment = 1

[node name="Play_button" type="Button" parent="Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_msvgr")
theme_override_font_sizes/font_size = 91
text = "      Play      "

[node name="FullScreen_button" type="Button" parent="Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_msvgr")
theme_override_font_sizes/font_size = 91
text = "FullScreen"

[node name="Quit_button" type="Button" parent="Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_msvgr")
theme_override_font_sizes/font_size = 91
text = "      Quit      "

[connection signal="pressed" from="Options/Play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Options/FullScreen_button" to="." method="_on_full_screen_button_pressed"]
[connection signal="pressed" from="Options/Quit_button" to="." method="_on_quit_button_pressed"]
